crates/monochange_integration_tests/tests/snapshots/changelog_release_order__prepare_release_inserts_section_above_previous_release@namespaced-group-title-with-source.snap
---
source: crates/monochange_integration_tests/tests/changelog_release_order.rs
expression: changelog
---
# Changelog

All notable changes to this project will be documented in this file.

## abi [0.20.1](https://github.com/monochange/release-order/releases/tag/abi/v0.20.1) (2026-04-06)

Grouped release for `abi`.

### Features

- **Add release ordering coverage.** Ships a feature so the release prepares a second changelog section.
  _Packages:_ 🟠 _core_

## abi [0.20.0](https://github.com/monochange/release-order/releases/tag/abi/v0.20.0) (2026-04-01)

Grouped release for `abi`.

### Features

- Ship the first release.
